Update the book for JDK 27 and fix factual errors
Bring every chapter up to date as of September 2026 (JDK 27 current,
JDK 25 LTS, JDK 28 in development):

- Timeline: per-release sections for Java 22-27 and a "coming in 28"
  section; fix wrong dates (G1 default in 9, scoped values final in 25,
  compact headers experimental in 24, sealed classes final in 17, ...)
- Object layout: compact object headers (default in 27), correct mark
  word and lock-bit layouts, sizes re-measured with JOL for both layouts
- GC: G1 default everywhere (JEP 523), generational-only ZGC,
  generational Shenandoah, container ergonomics, dead flags
- Valhalla: rewritten around JEP 401 value objects (preview in 28)
  and JEP 539; drafts clearly labelled
- Concurrency: JEP 491 (no synchronized pinning), final scoped values,
  the new StructuredTaskScope.open()/Joiner API, LazyConstant, JEP 500
- Performance: chapter 20 reframed as Project Leyden (AOT cache,
  JEPs 483/514/515/516/544) plus GraalVM Native Image and the 2025
  GraalVM change; new JFR features; verified JIT defaults
- Ecosystem: integrity by default, final FFM API, class-file API,
  Scala 3.8/3.9 LTS, Kotlin 2.4; appendices and glossary refreshed

Presentation: callouts, version badges, Key Takeaways boxes, all code
blocks tagged, ASCII diagrams realigned and new ones added, manual
prev/next links removed (mdBook provides navigation), broken links fixed.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>